# Sistema-Experto-Construccion

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
construccion_experto/: __init__.py  dataset.py  features.py  plots.py
construccion_experto/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
