[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "construccion_experto"
version = "0.0.1"
description = "Sistema experto para la selecci\u00f3n y colocaci\u00f3n de pisos en viviendas familiares."
authors = [
  { name = "Suarez Jonatan" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["construccion_experto"]
force_sort_within_sections = true
